[package]
name = "cloud_sweeper"
version = "0.1.0"
publish = false
authors = ["Luc Couturier <luccouturier@mailfence.com>"]
edition = "2021"
exclude = ["dist", "build", "credits", "assets"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy_asset_loader = { version = "0.14", features = ["stageless"] }
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13", features=["wav"] }
rand = "0.8.5"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.27.5", default-features = false }
image = { version = "0.24.5", default-features = false }
iyes_loopless = "0.9"
bevy_prototype_debug_lines = "0.9"
bevy_ecs_tilemap = "0.9"
colored = "2.0.0"

[build-dependencies]
embed-resource = "1.7.4"


# [target.x86_64-pc-windows-msvc]
# linker = "lld"
# rustflags = [
#   "-Lnative=/opt/xwin/crt/lib/x86_64",
#   "-Lnative=/opt/xwin/sdk/lib/um/x86_64",
#   "-Lnative=/opt/xwin/sdk/lib/ucrt/x86_64"
# ]

# [env]
# CARGO_MANIFEST_DIR="/home/luc/Dev/bevy_perso/cloud_sweeper"
