[package]
name = "cloud_sweeper"
version = "0.1.0"
publish = false
authors = ["Luc Couturier <luccouturier@mailfence.com>"]
edition = "2021"
exclude = ["dist", "build", "credits", "assets"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# [features]
# dev = [
#     "bevy/dynamic",
# ]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy_asset_loader = { version = "0.16" }
bevy = { version = "0.10", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "png",
    "x11",
    "bevy_text",
    "bevy_ui",
    "jpeg",
] }
bevy_kira_audio = { version = "0.15", features = ["wav", "settings_loader"] }
rand = "0.8.5"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
# bevy_prototype_debug_lines = "0.10"
bevy_ecs_tilemap = "0.10"
colored = "2.0.0"
bevy_easings = "0.10.0"

[build-dependencies]
embed-resource = "2.1"


# [target.x86_64-pc-windows-msvc]
# linker = "lld"
# rustflags = [
#   "-Lnative=/opt/xwin/crt/lib/x86_64",
#   "-Lnative=/opt/xwin/sdk/lib/um/x86_64",
#   "-Lnative=/opt/xwin/sdk/lib/ucrt/x86_64"
# ]

# [env]
# CARGO_MANIFEST_DIR="/home/luc/Dev/bevy_perso/cloud_sweeper"
